--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ button:hover {
 #imc-number {
   font-size: 2.2rem;
   margin-bottom: 0.6rem;
+  margin-top: 0.6em;
 }
 
 #imc-info {
@@ -143,7 +144,7 @@ button:hover {
 }
 
 #result-container h3 {
-  margin-top: 1rem;
+  margin-top: 2rem;
   color: #dfdfdf;
 }
 
